# mech-interp-coding-llms

./: .gitignore  Qwen2_5_1_5B_Instruct.ipynb  README.md  RESULTS.md  RESULTS_TABLE.md  pyproject.toml
dataset/python/boolean/: synthetic_boolean_dataset.csv
docs/: dataset_v0.md
fixtures/: boolean_occurrence_sample.go  boolean_occurrence_sample.java  boolean_occurrence_sample.py  minimal_forward_align_spans.json  token_alignment_cases.json
notebooks/: colab_activations_and_probing.ipynb  probing_codecomplex.ipynb  probing_directional_analysis.ipynb  probing_more_perturbations.ipynb  probing_renamed_variables.ipynb  probing_variable_roles.ipynb  state_probing_variable_roles.ipynb
scripts/: activation_pipeline.py  boolean_flag_roles.py  clean_boolean_labels.py  codesearchnet.py  codesearchnet_python.py  csn_function_ast.py  dataset_v0.py  go_boolean_flag_roles.py  go_csn_parse.py  go_variable_occurrences.py  java_boolean_flag_roles.py  java_csn_parse.py  java_variable_occurrences.py  qwen_inference.py  token_alignment.py  variable_occurrences.py
