[project]
name = "mech-interp-coding-llms"
version = "0.1.0"
description = "Mechanistic interpretability experiments on coding LLMs (boolean variable roles, CodeSearchNet Python)."
requires-python = ">=3.11"
dependencies = [
    "accelerate>=0.26.0",
    "datasets>=2.18.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.4.0",
    "torch>=2.1.0",
    "tqdm>=4.66.0",
    "transformers>=4.40.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-java>=0.23.5",
]

[tool.uv]
package = false
